# pado

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cli.go  config.go  go.mod  go.sum  install-man.sh  main.go  path.go  pd.go  pdstate  project.go  projects.go  sp.go  state  state.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs
cmd/: core.go  interactive.go
libpado/: Cargo.toml  README.md
libpado/benches/: benchmarks.rs
libpado/src/: build.rs  error.rs  lib.rs  project.rs
libpado/tests/: build_tests.rs  project_tests.rs
pado/: Cargo.toml  README.md
pado/examples/: pado.toml
pado/man/: README.md  pd-config.5  pd-project.5  pd.1
pado/shell/: pado.bash  pado.fish  pado.zsh
pado/src/: config.rs  lib.rs  main.rs  tracking.rs  utils.rs
pado/src/commands/: add.rs  build_cmd.rs  files.rs  info.rs  init.rs  list.rs  mod.rs  remove.rs
padofetch/: Cargo.toml  README.md
padofetch/src/: cli.rs  main.rs  stats.rs  utils.rs
padofetch/src/commands/: deps.rs  health.rs  info.rs  mod.rs  outdated.rs
project/: analyzer.go  detector.go  indicators.go  project.go
scripts/: another.sh  rg-fzf.sh  sp-fzf  sp-rg-fzf  testfile.sh
shell/: pado.bash  pado.fish  pado.zsh  parkour.bash  parkour.fish  parkour.zsh  sp.bash
src/: build.rs  config.rs  error.rs  lib.rs  main.rs  project.rs  stats.rs  tracking.rs
src/commands/: add.rs  build_cmd.rs  config_cmd.rs  files.rs  info.rs  init.rs  list.rs  mod.rs  remove.rs
state/: config.go  projects.go  state.go
tests/: build_tests.rs  config_tests.rs  project_tests.rs  tracking_tests.rs
utils/: path.go
