[package]
name = "parkour"
version = "0.1.0"
edition = "2024"

[lib]
name = "parkour"
path = "src/lib.rs"
homepage = "https://github.com/duckonomy/parkour"
repository = "https://github.com/duckonomy/parkour"

[[bin]]
name = "pk"
path = "src/main.rs"

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
thiserror = "2.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokei = "12.1"
gix = { version = "0.68", default-features = false, features = ["blocking-network-client"] }
comfy-table = "7.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.15"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
