[workspace]
members = ["libpado", "pado", "padofetch"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Ian Park <ian@ianpark.dev>"]
edition = "2024"
license = "MIT"
homepage = "https://github.com/duckonomy/pado"
repository = "https://github.com/duckonomy/pado"

[workspace.dependencies]
phf = { version = "0.13.1", features = ["macros"] }
thiserror = "2.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"

tempfile = "3.15"
criterion = "0.5"
